# slurbot

./: .gitignore  Cargo.toml
src/: event.rs  main.rs  swear.rs  types.rs
src/commands/: mod.rs
src/commands/gambling/: coinflip.rs  mod.rs
src/commands/gambling/cards/: blackjack.rs  mod.rs  types.rs
src/db/: migrate.rs  mod.rs
