[package]
name = "slur_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures = "0.3"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0"
rand = "0.10.1"
indexmap = "2.0"
